fix(front): fix double border on first element in favorite or search results
Issue ref: #4918
PR ref: #5001

--- a/frontend/src/css/ContentItem.styl
+++ b/frontend/src/css/ContentItem.styl
@@ -5,6 +5,8 @@
   &.item-last
     border-bottom borderStyle
     margin-bottom standardSpacing
+  &.item-first
+    border-bottom 0
   &__item
     padding standardSpacing 0
   &__type
